[gd_scene load_steps=13 format=3 uid="uid://dsr3qkcxcu6g6"]

[ext_resource type="Script" path="res://Base/Characters/player_base.gd" id="1_6wqct"]
[ext_resource type="PackedScene" uid="uid://ddbhwoh51a4n0" path="res://Scenes/Player_old/barbarian.tscn" id="2_ndb2v"]
[ext_resource type="PackedScene" uid="uid://cwttda7m4pdf" path="res://Base/Characters/player_engine.tscn" id="3_ynjfb"]
[ext_resource type="PackedScene" path="res://health_bar_3d.tscn" id="4_31ygq"]
[ext_resource type="Script" path="res://Base/Characters/character_sheet.gd" id="5_4lt7j"]
[ext_resource type="JSON" path="res://data/barbarian_sheet.json" id="6_woybo"]
[ext_resource type="Script" path="res://Skills/skill_spin.gd" id="7_rrjm8"]
[ext_resource type="Script" path="res://Base/Scripts/attack.gd" id="8_libmu"]
[ext_resource type="Script" path="res://Base/Characters/player_commands.gd" id="9_pw8pl"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3yc3k"]
radius = 0.438906

[sub_resource type="SphereShape3D" id="SphereShape3D_ljr0i"]
radius = 30.0

[sub_resource type="SphereShape3D" id="SphereShape3D_3wyrc"]
radius = 5.0

[node name="PlayerBarbarian" type="CharacterBody3D"]
collision_mask = 4
script = ExtResource("1_6wqct")

[node name="Pivot" type="Node3D" parent="."]

[node name="Model" parent="Pivot" instance=ExtResource("2_ndb2v")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01367, 0)
shape = SubResource("CylinderShape3D_3yc3k")

[node name="PlayerEngine" parent="." instance=ExtResource("3_ynjfb")]

[node name="PlayerCommands" type="Node" parent="PlayerEngine"]
script = ExtResource("9_pw8pl")

[node name="Vision" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Shape" type="CollisionShape3D" parent="Vision"]
shape = SubResource("SphereShape3D_ljr0i")

[node name="Pickup" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pickup"]
shape = SubResource("SphereShape3D_3wyrc")

[node name="HealthBar3D" parent="." instance=ExtResource("4_31ygq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.69419, 0)
show_value = true

[node name="CharacterSheet" type="Node" parent="."]
script = ExtResource("5_4lt7j")
sheet_data = ExtResource("6_woybo")

[node name="SignatureSkill" type="Node" parent="." node_paths=PackedStringArray("attack")]
script = ExtResource("7_rrjm8")
attack = NodePath("CharacterAttack")
radius = 2.5

[node name="CharacterAttack" type="Node" parent="SignatureSkill"]
script = ExtResource("8_libmu")
physical_damage = 20.0
critical_chance = 0.2

[connection signal="area_entered" from="Pickup" to="." method="_on_pickup_area_entered"]
